# gillespie-cpp

./: CMakeLists.txt  README.md
example/: CMakeLists.txt
example/data/: A.txt
example/data_bimol_gillespie/: 000.txt  001.txt  002.txt  003.txt  004.txt  005.txt  007.txt  008.txt  009.txt
example/data_gillespie/: A.txt
example/data_lotka_volterra_gillespie/: 006.txt
example/data_tau_leaping/: A.txt
example/mathematica/: example.nb  example_bimol.nb  example_lotka_volterra.nb
example/src/: bimol_gillespie.cpp  main.cpp  main_gillespie.cpp  main_tau_leaping.cpp
include/: gilsp
include/gilsp_bits/: counts.hpp  counts_hist.hpp  gillespie.hpp  helpers.hpp  rxn.hpp  tau_leaping.hpp
src/: counts.cpp  counts_hist.cpp  gillespie.cpp  helpers.cpp  rxn.cpp  tau_leaping.cpp
